--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <div id="header-logo-title">
-            <img onclick="scrollToTopAndReload()" id="header-img" src="/images/SSN_logo.svg">
+            <img onclick="scrollToTopAndReload()" id="header-img" src="images/SSN_logo.svg">
             <h1 onclick="scrollToTopAndReload()">News</h1>
         </div>
 
